--- a/Peak/war/WEB-INF/web.xml
+++ b/Peak/war/WEB-INF/web.xml
@@ -6,7 +6,7 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet>
 		<servlet-name>Peak</servlet-name>
-		<servlet-class>peaks.PeakServlet</servlet-class>
+		<servlet-class>peaks.PeaksServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Peak</servlet-name>
