--- a/Peak/war/WEB-INF/web.xml
+++ b/Peak/war/WEB-INF/web.xml
@@ -4,6 +4,16 @@ xmlns="http://java.sun.com/xml/ns/javaee"
 xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+
+    <servlet>
+		<servlet-name>Region</servlet-name>
+		<servlet-class>peaks.RegionsServlet</servlet-class>
+	</servlet>	
+	<servlet-mapping>
+		<servlet-name>Region</servlet-name>
+		<url-pattern>/region</url-pattern>
+	</servlet-mapping>
+	
 	<servlet>
 		<servlet-name>Peak</servlet-name>
 		<servlet-class>peaks.PeaksServlet</servlet-class>
@@ -12,6 +22,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Peak</servlet-name>
 		<url-pattern>/peak</url-pattern>
 	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
