--- a/Peak/war/WEB-INF/web.xml
+++ b/Peak/war/WEB-INF/web.xml
@@ -22,6 +22,15 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>Peak</servlet-name>
 		<url-pattern>/peak</url-pattern>
 	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>Climber</servlet-name>
+		<servlet-class>peaks.ClimbersServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Climber</servlet-name>
+		<url-pattern>/climber</url-pattern>
+	</servlet-mapping>
 	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
